terraform/modules/networking/vpc.tf
# TODO PRSD-733: Add vpc flow logs
#tfsec:ignore:aws-ec2-require-vpc-flow-logs-for-all-vpcs
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "prsdb-vpc-${var.environment_name}"
  }
}
